[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["miautawn <miautawn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
inquirerpy = "^0.3.4"
pymongo = "^4.5.0"
radon = "^6.0.1"
cohesion = "^1.1.0"
black = "^23.10.1"
mypy = "^1.6.1"
pyright = "^1.1.334"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
